# serde_struct_wrapper

./: Cargo.toml  LICENSE-APACHE  README.md
src/: lib.rs
tests/: test.rs  test_de.rs  test_ser.rs  test_ser_de.rs
